<resources>
    <string name="app_name" translatable="false">OpenWebWeaver</string>
    <string name="btn_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="login_failed">Login failed</string>
    <string name="confirm">Okay</string>
    <string name="task_completed_desc">Task completed</string>
    <string name="task_not_completed_desc">Task not completed</string>
    <string name="until_date">Until %s</string>
    <string name="mail">Mail</string>
    <string name="tasks">Tasks</string>
    <string name="overview">Overview</string>
    <string name="quota">%s of %s unused</string>
    <string name="unread">Unread: %d</string>
    <string name="system_notifications">System notifications</string>
    <string name="file_storage">File storage</string>
    <string name="created_date">Created: %s</string>
    <string name="not_set">&lt;not set&gt;</string>
    <string name="tasks_done">Done: %d / %d</string>
    <string name="system_notification_file_download">File downloaded</string>
    <string name="system_notification_file_upload">File uploaded</string>
    <string name="system_notification_new_trust">New trusted device</string>
    <string name="system_notification_new_task">New task</string>
    <string name="system_notification_new_notification">New notification</string>
    <string name="system_notification_type_unknown">Unknown type</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <plurals name="notification_count">
        <item quantity="one">%d notification</item>
        <item quantity="other">%d notifications</item>
    </plurals>
    <string name="open_website">Open website</string>
    <string name="directory">Directory</string>
    <string name="directory_empty">Directory is empty</string>
    <string name="mail_folder_inbox">Inbox</string>
    <string name="mail_folder_drafts">Drafts</string>
    <string name="mail_folder_sent">Sent</string>
    <string name="mail_folder_trash">Trash</string>
    <string name="forum">Forum</string>
    <string name="read_mail">Read mail</string>
    <string name="task_details">Task details</string>
    <string name="see_post">See post</string>
    <string name="see_system_notification">System notification</string>
    <string name="see_notification">Notification</string>
    <string name="members">Members</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="forum_empty">No posts</string>
    <string name="mail_empty">No mails</string>
    <string name="members_empty">No members</string>
    <string name="notifications_empty">No notifications</string>
    <string name="system_notifications_empty">No system notifications</string>
    <string name="tasks_empty">No tasks</string>
    <string name="delete">Delete</string>
    <string name="error_other">Error: %s</string>
    <string name="new_notification">New notification</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="edit">Edit</string>
    <string name="edit_notification">Edit notification</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <string name="save">Save</string>
    <string name="new_task">New task</string>
    <string name="edit_task">Edit task</string>
    <string name="task_start">Start</string>
    <string name="task_due">Due</string>
    <string name="task_start_before_due">Start date must be before due date</string>
    <string name="task_completed">Completed</string>
    <string name="system_notification_unauthorized_login_location">Unauthorized login location</string>
    <string name="add_folder">Add folder</string>
    <string name="new_mail">New mail</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="mail_subject">Subject</string>
    <string name="mail_to">To</string>
    <string name="send_mail">Send mail</string>
    <string name="write_mail">Write mail</string>
    <string name="mail_to_cc">CC</string>
    <string name="mail_to_bcc">BCC</string>
    <string name="mail_no_subject">No subject</string>
    <string name="mail_no_message">No message</string>
    <string name="mail_no_to">No address</string>
    <string name="comments">Comments</string>
    <string name="show_comments">Show comments</string>
    <string name="no_comments">No comments</string>
    <string name="error_overview_request_failed">Failed to get overview information (%s)</string>
    <string name="unknown_reference_type">Unknown reference type \"%s\"</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="setting_correct_file_storage_file_names">Normalize file names</string>
    <string name="setting_correct_file_storage_file_names_description">Removes file ending and replaces underscores of filenames downloaded form file storage when opening in another app</string>
    <string name="setting_open_link_external">Open links in external browser</string>
    <string name="locked">Locked</string>
    <string name="pinned">Pinned</string>
    <string name="file_storage_integration">File storage integration</string>
    <string name="setting_enable_preview_images">Enable preview images</string>
    <string name="setting_enable_preview_images_description">Activating preview images results in undefined behaviour if there are too many files</string>
    <string name="flagged">Flagged</string>
    <string name="answered">Answered</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="download_finished">Download finished</string>
    <string name="upload">Upload</string>
    <string name="token_login_link"><a href="www.www.com">Token login</a></string>
    <string name="token">Token</string>
    <string name="remember_token">Remember token</string>
    <string name="import_into_calendar">Import into calendar</string>
    <string name="learning_plan_not_support">Learning plans are currently not supported</string>
    <string name="choose_account">Choose account</string>
    <string name="switch_account">Switch account</string>
    <string name="add_account">Add account</string>
    <string name="beta_disclaimer">Beta disclaimer</string>
    <string name="beta_disclaimer_text">Hi!\nThanks for using my app.\nSince this is just the beta-version of my app, there might be issues.\nIf you found any or have suggestions for improvement, feel free to create an issue here: https://github.com/deftkHD/OpenWebWeaver-Android/issues</string>
    <string name="privacy_title">Privacy statement</string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="privacy_short">The complete data privacy statement can be accessed here: https://github.com/deftkHD/OpenWebWeaver-Android/blob/master/PRIVACY_DE.md\n\nIn short:\nThe provider of this app doesn\'t collect data, but can\'t guarantee how data sent to the provider is handled by the provider.\nFor more information please refer to the data privacy statement of your provider.</string>
    <string name="notification_upload_title">Uploading</string>
    <string name="notification_upload_content">Uploading file %s…</string>
    <string name="notification_download_title">Downloading</string>
    <string name="notification_download_content">Downloading file %s…</string>
    <string name="see_comment">See comment</string>
    <string name="password_login_link"><a href="www.www.com">Password login</a></string>
    <string name="email_sent">Email sent!</string>
    <string name="messenger">Messenger</string>
    <string name="no_messages">No messages</string>
    <string name="add_chat">Add new chat</string>
    <string name="send_message">Send message</string>
    <string name="attachment">Attachment</string>
    <string name="no_groups">No groups</string>
    <string name="no_contacts">No contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="contacts">Contacts</string>
    <string name="edit_contact">Edit contact</string>
    <string name="nick_name">Nick name</string>
    <string name="full_name">Full name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email address</string>
    <string name="email_address_2">Email address 2</string>
    <string name="email_address_3">Email address 3</string>
    <string name="mobile_phone">Mobile</string>
    <string name="gender">Gender</string>
    <string name="hobbys">Hobbys</string>
    <string name="home_city">Home • City</string>
    <string name="home_coordinates">Home • Coordinates</string>
    <string name="home_country">Home • Country</string>
    <string name="home_fax">Home • Fax</string>
    <string name="home_phone">Home • Phone</string>
    <string name="postal_code">Home • Postal code</string>
    <string name="home_state">Home • State</string>
    <string name="home_street">Home • Street</string>
    <string name="home_street_2">Home • Street 2</string>
    <string name="home_street_3">Home • Street 3</string>
    <string name="job_title">Job title</string>
    <string name="job_title_2">Job title 2</string>
    <string name="suffix">Suffix</string>
    <string name="company">Company</string>
    <string name="company_type">Company type</string>
    <string name="business_city">Business • City</string>
    <string name="business_coordinates">Business • Coordinates</string>
    <string name="business_country">Business • Country</string>
    <string name="business_fax">Business • Fax</string>
    <string name="business_phone">Business • Phone</string>
    <string name="business_postal_code">Business • Postal code</string>
    <string name="business_state">Business • State</string>
    <string name="business_street">Business • Street</string>
    <string name="business_street_2">Business • Street 2</string>
    <string name="business_street_3">Business • Street 3</string>
    <string name="subjects">Subjects</string>
    <string name="uid">UID</string>
    <string name="website">Website</string>
    <string name="notes">Notes</string>
    <string name="categories">Categories</string>
    <string name="read_contact">Read contact</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="add_contact_detail">Add field</string>
    <string name="edit_contact_detail">Edit field</string>
    <string name="remove_contact_detail">Remove field</string>
    <string name="value">Value</string>
    <string name="no_contact_details">No fields</string>
    <string name="account_type" translatable="false">OpenWebWeaver/webweaver</string>
    <string name="institution">Institution</string>
    <string name="move">Move</string>
    <string name="customize_overview">Customize overview</string>
    <string name="customize_overview_description">Show or hide certain elements</string>
    <string name="set_unread">Mark as unread</string>
    <string name="set_read">Mark as read</string>
    <string name="force_invalidate_session">Force invalidate session</string>
    <string name="show_past_requests">Show past requests</string>
    <string name="show_exceptions">Show exceptions</string>
</resources>