<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single"
        android:orderInCategory="0">

        <item
            android:id="@+id/overviewFragment"
            android:icon="@drawable/ic_list_24"
            android:title="@string/overview" />

    </group>

    <group
        android:id="@+id/feature_group"
        android:checkableBehavior="single"
        android:orderInCategory="1"/>

    <group
        android:id="@+id/utility_group"
        android:checkableBehavior="single"
        android:orderInCategory="2">

        <item
            android:id="@+id/drawer_item_open_website"
            android:icon="@drawable/ic_language_24"
            android:title="@string/open_website" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/account_group"
        android:checkableBehavior="single"
        android:orderInCategory="3">

        <item
            android:id="@+id/drawer_item_add_account"
            android:icon="@drawable/ic_person_add_24"
            android:title="@string/add_account" />

        <item
            android:id="@+id/drawer_item_switch_account"
            android:icon="@drawable/ic_account_circle_24"
            android:title="@string/switch_account"
            android:visible="false" />

        <item
            android:id="@+id/drawer_item_logout"
            android:icon="@drawable/ic_lock_open_24"
            android:title="@string/logout" />

    </group>

</menu>