<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.feature.mail.ReadMailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp" />

    <RelativeLayout
        android:id="@+id/mail_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <EditText
            android:id="@+id/mail_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="?android:attr/textColorPrimary"
            android:hint="@string/mail_subject"
            android:importantForAutofill="no"
            android:inputType="textEmailSubject" />

        <EditText
            android:id="@+id/mail_to_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail_subject"
            android:layout_alignParentStart="true"
            android:hint="@string/mail_to"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mail_to_address_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail_to_address"
            android:layout_alignParentStart="true"
            android:hint="@string/mail_to_cc"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mail_to_address_bcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail_to_address_cc"
            android:layout_alignParentStart="true"
            android:hint="@string/mail_to_bcc"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/mail_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:scrollbars="vertical"
            android:textColor="?android:attr/textColorPrimary"
            android:padding="8dp"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_send_mail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_send_32"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/send_mail" />

</RelativeLayout>